--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Simple caluculator</title>
+        <title> caluculator</title>
         <link rel="stylesheet" href="css/design.css"></link>
     </head>
     <body>
