--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> caluculator</title>
+        <title>Simple caluculator</title>
         <link rel="stylesheet" href="css/design.css"></link>
         <script src="JS/calculator.js"></script>
     </head>
