--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id='calc-contain'>
 
-            <input type="text" id="expression" name="expression" onkeydown="calculate()" />
+            <input type="text" id="expression" name="expression" onkeypress="calculate(event)" />
             <input type="text" id="answer" name="answer" />
             <br>
             
