modulo and decimal functions are called

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <input type="button" id="divison" value=" / " style="color:orange" onclick="divide()" />
             </br>
             
-            <input type="button" id="clear" value=" . " style="color:orange" onclick="" />
-            <input type="button" id="clear" value=" % " style="color:orange" onclick="" />
+            <input type="button" id="decimal" value=" . " style="color:orange" onclick="decimal()" />
+            <input type="button" id="modulo" value=" % " style="color:orange" onclick="modulo()" />
             
             <br/>
           <div id="agh">
