--- a/cargame/index.html
+++ b/cargame/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<!-- <body onkeydown="catchKeyEvent(event)"> -->
+    <body>
     <input type"text" id="scorebox">
     <input type"text" id="bestscorebox">
     <div id="score"> Score:</div>
@@ -21,7 +22,7 @@
         <button id="start" onclick="">NEW GAME</button>
         
     </div>
-    <script src=""></script>
+    <script src="js/car.js"></script>
 </body>
 
 </html>
