Increasing speed, Updaating scores are done

--- a/cargame/index.html
+++ b/cargame/index.html
@@ -14,11 +14,11 @@
         <nav id ="scoreboard">
             <div id="currentscore">
                 <div id="score">Score</div>
-                <input type"text" id="scorebox">
+                <input type="text" id="scorebox">
             </div>
             <div id="bestscoredetail">
                 <div id="bestscore"> Best Score</div>
-                <input type"text" id="bestscorebox"> 
+                <input type="text" id="bestscorebox"> 
             </div>     
         </nav>
     <div id="play-ground">
